feat: use sign typed data instead of message
